@@ -1,6 +1,8 @@
 package fr.inria.atlanmod.neoemf.io.writer.json;
 
+
 import fr.inria.atlanmod.neoemf.tests.sample.Node;
+import fr.inria.atlanmod.neoemf.tests.sample.Comment;
 import fr.inria.atlanmod.neoemf.tests.sample.SampleFactory;
 import fr.inria.atlanmod.neoemf.tests.sample.Value;
 import fr.inria.atlanmod.neoemf.tests.sample.impl.LocalNodeImpl;
@@ -9,11 +11,12 @@ import org.eclipse.emf.ecore.resource.Resource;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.function.Consumer;
 
 public class AttributeTest {
     // Get the factory
-    private static final SampleFactory factory = SampleFactory.eINSTANCE;
+    private final SampleFactory factory = SampleFactory.eINSTANCE;
 
     @Test
     void testSingleAttribute() {
@@ -21,7 +24,7 @@ public class AttributeTest {
             Value val = factory.createValue();
             val.setValue(10);
 
-            resource.getContents().addAll(Arrays.asList(
+            resource.getContents().addAll(List.of(
                     val
             ));
         };
@@ -30,17 +33,29 @@ public class AttributeTest {
 
     @Test
     void testMultipleAttributes() {
-        Consumer<Resource> populator = resource -> {
-            Value val = factory.createValue();
-            val.setValue(10);
-            Value val2 = factory.createValue();
-            val2.setValue(12);
+        Value val = factory.createValue();
+        val.setValue(10);
+        Value val2 = factory.createValue();
+        val2.setValue(12);
+       // List<Value> values = List.of(val, val2);
 
-            resource.getContents().addAll(Arrays.asList(
-                    val, val2
-            ));
-        };
-        Helper.testMigration(populator, "AttributeTest/multipleAttribute/");
+        Comment comment = factory.createComment();
+        comment.setContent("comment body");
+
+        Consumer<Resource> populator = resource -> {
+            resource.getContents().addAll(
+                    List.of(val2, comment));
+            };
+        /*
+        values.stream().map(v -> {
+            Consumer<Resource> populator = resource -> {
+                resource.getContents().add(v);
+            };
+            Helper.testMigration(populator, "AttributeTest/multipleAttribute/");
+
+            return null;
+        });*/
+       Helper.testMigration(populator, "AttributeTest/multipleAttribute/");
     }
 
     @Test
